# save_lectures_api

./: app.py  pyproject.toml
cruds/: save.py
schemas/: lectures.py
