[tool.poetry]
name = "save_lectures_api"
version = "0.1.0"
description = ""
authors = ["yalr098 <yvesromero1998@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.85.0"
pydantic = "^1.10.2"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
